objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>DSCORGPKG__Suppress_from_DiscoverOrg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to hide this Campaign from DiscoverOrg&apos;s Add/Update feature.</inlineHelpText>
        <label>Suppress from DiscoverOrg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Campaign Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Name)&lt;5,&quot;Meaningful Campaign Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Status ,&quot;&quot;), &quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( StartDate )))=0, &quot;Start Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( EndDate )))=0, &quot;End Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(NumberOfContacts  +  NumberOfLeads = 0, &quot;No Associated Members, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT( ExpectedRevenue ))=0, &quot;Expected Revenue&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN(  Name  ) &lt; 5, 0,20) + IF(ISPICKVAL(  Type ,&quot;&quot; ), 0,20) + IF(ISPICKVAL( Status ,&quot;&quot; ), 0,20) + IF(LEN( TEXT(MONTH( StartDate )))= 0, 0,10) + IF( LEN(TEXT(MONTH( EndDate ))) = 0, 0,10) + IF(  NumberOfContacts  +  NumberOfLeads = 0, 0,10)  + IF( LEN( TEXT( ExpectedRevenue ) ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventbriteSync__EventbriteId__c</fullName>
        <label>Eventbrite Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geo__c</fullName>
        <description>select the Geo where the event takes place</description>
        <inlineHelpText>select the Geo where the event takes place</inlineHelpText>
        <label>Geo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMS</fullName>
                    <color>#FFCC33</color>
                    <label>AMS</label>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#78C953</color>
                    <label>APAC</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#3366FF</color>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>INDIA</fullName>
                    <color>#FF99FF</color>
                    <label>INDIA</label>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>DACH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ON24EventID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ON24EventID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>dr_buying_stage__c</fullName>
        <label>Buying Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stage 1</fullName>
                </value>
                <value>
                    <fullName>Stage 2</fullName>
                </value>
                <value>
                    <fullName>Stage 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dr_content__c</fullName>
        <description>Changing field label from &quot;Content&quot; to &quot;Content Name&quot; - left the API name intact for reporting.
Original requester Wayne - Update bazwe: 02102017</description>
        <label>Content Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dr_content_type__c</fullName>
        <label>Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analyst Report</fullName>
                </value>
                <value>
                    <fullName>Calculators</fullName>
                </value>
                <value>
                    <fullName>Case Study</fullName>
                </value>
                <value>
                    <fullName>Community Edition</fullName>
                </value>
                <value>
                    <fullName>Conference - 3rd Party</fullName>
                </value>
                <value>
                    <fullName>Conference - Customer</fullName>
                </value>
                <value>
                    <fullName>Conference - GSI</fullName>
                </value>
                <value>
                    <fullName>Conference - ISV</fullName>
                </value>
                <value>
                    <fullName>Content Collection</fullName>
                </value>
                <value>
                    <fullName>Demo On Demand</fullName>
                </value>
                <value>
                    <fullName>Demo Request</fullName>
                </value>
                <value>
                    <fullName>Event - Accelerate</fullName>
                </value>
                <value>
                    <fullName>Event - GSI</fullName>
                </value>
                <value>
                    <fullName>Event - ISV</fullName>
                </value>
                <value>
                    <fullName>Event - Other</fullName>
                </value>
                <value>
                    <fullName>Event - Roadshow</fullName>
                </value>
                <value>
                    <fullName>Event - Update Special</fullName>
                </value>
                <value>
                    <fullName>Event - Workshop</fullName>
                </value>
                <value>
                    <fullName>Fact Sheet</fullName>
                </value>
                <value>
                    <fullName>Free Trial</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
                <value>
                    <fullName>Peer Review</fullName>
                </value>
                <value>
                    <fullName>Presentation</fullName>
                </value>
                <value>
                    <fullName>Report</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Talk to Sales</fullName>
                </value>
                <value>
                    <fullName>Template</fullName>
                </value>
                <value>
                    <fullName>Thought Leadership</fullName>
                </value>
                <value>
                    <fullName>Training - MOOC</fullName>
                </value>
                <value>
                    <fullName>Training - Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dr_content_type_category__c</fullName>
        <description>Changing field label from &quot;Content Type Category&quot; to &quot;Tactic&quot; - left the API name intact for reporting.
Original requester Wayne - Update bazwe: 02102017</description>
        <label>Tactic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlassian Marketplace</fullName>
                </value>
                <value>
                    <fullName>Banner</fullName>
                </value>
                <value>
                    <fullName>Blog</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Display Ad</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Email - Nurture</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Flood IO</fullName>
                </value>
                <value>
                    <fullName>Marketplace</fullName>
                </value>
                <value>
                    <fullName>Organic - Direct</fullName>
                </value>
                <value>
                    <fullName>Placement</fullName>
                </value>
                <value>
                    <fullName>PPC</fullName>
                </value>
                <value>
                    <fullName>Press Release</fullName>
                </value>
                <value>
                    <fullName>Talk to Sales</fullName>
                </value>
                <value>
                    <fullName>Talk to Sales (Chat)</fullName>
                </value>
                <value>
                    <fullName>Template</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dr_exclude_from_dashboard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude From Dashboard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dr_funnel_reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Funnel Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dr_important_action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Important Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dr_important_action_type__c</fullName>
        <label>Important Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Branded Search Term</fullName>
                </value>
                <value>
                    <fullName>Clicked Drip Email</fullName>
                </value>
                <value>
                    <fullName>Clicked Nurture Email</fullName>
                </value>
                <value>
                    <fullName>Clicks Any Email</fullName>
                </value>
                <value>
                    <fullName>Clicks Important Email</fullName>
                </value>
                <value>
                    <fullName>Clicks Important Webpage</fullName>
                </value>
                <value>
                    <fullName>Clicks Social</fullName>
                </value>
                <value>
                    <fullName>In App</fullName>
                </value>
                <value>
                    <fullName>Non-Branded Search Term</fullName>
                </value>
                <value>
                    <fullName>Opened Any Email</fullName>
                </value>
                <value>
                    <fullName>Opened Drip Email</fullName>
                </value>
                <value>
                    <fullName>Opened Important Email</fullName>
                </value>
                <value>
                    <fullName>Opened Nurture Email</fullName>
                </value>
                <value>
                    <fullName>Views Multimedia</fullName>
                </value>
                <value>
                    <fullName>Visits Any Webpage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dr_list_only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>List Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dr_nurture_campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nurture Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dr_nurture_campaign_name__c</fullName>
        <label>Nurture Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dr_parent_campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parent Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dr_substantial_engagement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Substantial Engagement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dr_traffic_medium__c</fullName>
        <label>Traffic Medium</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Banner</fullName>
                </value>
                <value>
                    <fullName>Blog Post</fullName>
                </value>
                <value>
                    <fullName>Content Syndication</fullName>
                </value>
                <value>
                    <fullName>Contributed Article</fullName>
                </value>
                <value>
                    <fullName>CPC</fullName>
                </value>
                <value>
                    <fullName>Direct Website Visit</fullName>
                </value>
                <value>
                    <fullName>Display - Contextual</fullName>
                </value>
                <value>
                    <fullName>Display - Retargeting</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>NA - Parent Campaign</fullName>
                </value>
                <value>
                    <fullName>Newsletter Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Online Referral Non Paid/Organic</fullName>
                </value>
                <value>
                    <fullName>Organic Search</fullName>
                </value>
                <value>
                    <fullName>Paid Email</fullName>
                </value>
                <value>
                    <fullName>Paid Social Media</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Social Sharing</fullName>
                </value>
                <value>
                    <fullName>Speaker</fullName>
                </value>
                <value>
                    <fullName>Third Party Promo</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Organic</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dr_traffic_medium_category__c</fullName>
        <label>Traffic Medium Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blog</fullName>
                </value>
                <value>
                    <fullName>Content Syndication</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>Direct Website Visit</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>NA - Parent Campaign</fullName>
                </value>
                <value>
                    <fullName>Online Referral Non Paid/Organic</fullName>
                </value>
                <value>
                    <fullName>Organic Search</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Speaker</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dr_traffic_source__c</fullName>
        <label>Traffic Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adroll</fullName>
                </value>
                <value>
                    <fullName>Bing</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>DB</fullName>
                </value>
                <value>
                    <fullName>DB - Drip</fullName>
                </value>
                <value>
                    <fullName>DB - Footer</fullName>
                </value>
                <value>
                    <fullName>DB - Newsletter</fullName>
                </value>
                <value>
                    <fullName>DB - Nurture</fullName>
                </value>
                <value>
                    <fullName>Emedia</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>Google Plus</fullName>
                </value>
                <value>
                    <fullName>GoToWebinar</fullName>
                </value>
                <value>
                    <fullName>Guru99</fullName>
                </value>
                <value>
                    <fullName>IDG</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>IT Central Station</fullName>
                </value>
                <value>
                    <fullName>Linkedin</fullName>
                </value>
                <value>
                    <fullName>Madison Logic</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>Milind</fullName>
                </value>
                <value>
                    <fullName>Mobile Labs</fullName>
                </value>
                <value>
                    <fullName>NA - Parent Campaign</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
                <value>
                    <fullName>Newsletter - Gartner 2014 Q4</fullName>
                </value>
                <value>
                    <fullName>Newsletter - Partner - Feb 2015</fullName>
                </value>
                <value>
                    <fullName>Newsletter - Support 2015</fullName>
                </value>
                <value>
                    <fullName>Newsletter - Whats New 2015</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>ON24EventID__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>dr_content_type__c</columns>
        <columns>dr_content__c</columns>
        <columns>dr_traffic_medium__c</columns>
        <columns>dr_traffic_source__c</columns>
        <columns>dr_important_action__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>EventbriteSync__ebCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>EventbriteSync__EventbriteId__c</columns>
        <columns>CAMPAIGN.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EventbriteSync__EventbriteId__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Eventbrite Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>